2.production-kubernetes/manifest/2.2_secret-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-client-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-client-app
  template:
    metadata:
      labels:
        app: mysql-client-app
    spec:
      containers:
      - name: mysql-client-app
        image: your-mysql-client-image:latest
